# ugly-duckling

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: clang-format-check.yml  cmake-single-platform.yml
include/: Formatter.hpp  commands.hpp  common.hpp  compressor.hpp  converter.hpp  decompressor.hpp  draw.hpp  mainwindow.hpp  minifier.hpp  most_active.hpp  most_followed.hpp  mutual.hpp  parser.hpp  prettifier.hpp  search.hpp  suggester.hpp  util.hpp
src/: Formatter.cpp  common.cpp  converter.cpp  draw.cpp  main.c  main.cpp  minifier.cpp  most_active.cpp  most_followed.cpp  parser.cpp  prettifier.cpp  search.cpp  suggester.cpp  util.cpp
src/commands/: compressor.cpp  decompressor.cpp  draw.cpp  format.cpp  json.cpp  mini.cpp  most_active.cpp  most_influencer.cpp  mutual.cpp  search.cpp  suggest.cpp  verify.cpp
src/gui/: gui.cpp  mainwindow.cpp  mainwindow.ui
tests/samples/: bad.xml  comments.xml  out.json  out_com.xml  sample.xml
